# opal

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  Why.md  index-130be2743ee75e25.js  index-130be2743ee75e25_bg.wasm  index-21d3656b3ad1deb.js  index-21d3656b3ad1deb_bg.wasm  index-384c3a83e1410330.js  index-384c3a83e1410330_bg.wasm  index-3b4186e6fac64398.js  index-3b4186e6fac64398_bg.wasm  index-42bfe7b3e6302b15.js  index-42bfe7b3e6302b15_bg.wasm  index-43365dbf88d424ab.js  index-43365dbf88d424ab_bg.wasm  index-4e48bb48c2e4f9d5.js  index-4e48bb48c2e4f9d5_bg.wasm  index-65166e3ca7cb872e.js  index-65166e3ca7cb872e_bg.wasm  index-6713d64554b93c50.js  index-6713d64554b93c50_bg.wasm  index-672e30b525373467.js  index-672e30b525373467_bg.wasm  index-682fb39dd8fedc27.js  index-682fb39dd8fedc27_bg.wasm  index-6d8f9e4055a3bd9.js  index-6d8f9e4055a3bd9_bg.wasm  index-6e99a0b11d77b51d.js  index-6e99a0b11d77b51d_bg.wasm  index-867b21c5137d7646.js  index-867b21c5137d7646_bg.wasm  index-8778bbc480a972f0.js  index-8778bbc480a972f0_bg.wasm  index-89c3acc58fac904f.js  index-89c3acc58fac904f_bg.wasm  index-9316ccbd13fea2b8.js  index-9316ccbd13fea2b8_bg.wasm  (+78 more)
.github/workflows/: build.yml  check.yml  ci.yml  deploy.yml
css/: input.css
scripts/: cmudict.py  create_db.sh  npm_dependencies.sh  optimize.py  optimize_sql.sql  sqlite.py
scripts/cmudict/: cmudict.py
src/: DESIGN.md  app.rs  components.rs  main.rs
src/components/: computer_icon.rs  displayed_results.rs  info_icon.rs  info_modal.rs  magnifying_glass.rs  moon_icon.rs  search_bar.rs  spinner.rs  sun_icon.rs  x_mark.rs
static/code/: README.md  sql-wasm.wasm  sqlite.worker.js
static/databases/: database.sqlite3  db.sqlite3.000
static/favicon_io/: about.txt
