[package]
name = "opal"
version = "0.1.0"
edition = "2021"

[dependencies]
concat-string = "1.0.1"
console_log = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-js-httpvfs-rs = { git = "https://github.com/ClementTsang/sql.js-httpvfs-rs" }
# sql-js-httpvfs-rs = { path = "../sql.js-httpvfs-rs" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "MediaQueryList",
    "Window",
    "HtmlTextAreaElement",
    "EventTarget",
    "Event",
] }
yew = "0.19"


[features]
default = ["console_log", "log"]
# default = []

[profile.release]
lto = true
opt-level = 's'
