[package]
name = "opal"
version = "0.1.0"
edition = "2021"

[dependencies]
concat-string = "1.0.1"
console_log = { version = "0.2.0", optional = true }
log = { version = "0.4.14", optional = true }
js-sys = "0.3.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sql-js-httpvfs-rs = "0.0.1"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3.56", features = ["Window", "EventTarget", "Event"] }
wee_alloc = "0.4.5"
yew = "0.19.3"


[features]
default = ["console_log", "log"]
# default = []

[profile.release]
lto = true
opt-level = 's'
