[package]
name = "opal"
version = "0.1.0"
edition = "2021"
description = "opal is a simple static webapp to look up the IPA phonetics of English words, or vice versa."

[dependencies]
concat-string = "1.0.1"
console_log = { version = "0.2.0", optional = true }
indexmap = "1.8.1"
log = { version = "0.4.14", optional = true }
js-sys = "0.3.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.91"
sql-js-httpvfs-rs = "0.0.1"
# sql-js-httpvfs-rs = { version = "0.0.2", path = "../sql.js-httpvfs-rs" }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3.56", features = [
    "Window",
    "MediaQueryList",
    "MouseEvent",
    "DomTokenList",
    "Document",
    "Element",
    "EventTarget",
    "Event",
    "Storage",
] }
yew = "0.19.3"


[features]
default = ["console_log", "log"]
# default = []

[profile.release]
lto = true
opt-level = 's'
panic = "abort"
